# fakeOwl

./: .gitmodules  0001-Patch-to-cuteeOwl-for-compat-with-fakeOwl.patch  CMakeLists.txt  LICENSE  README.md  Renderer.cpp  deviceCode.cpp  patching-owl.txt
cmake/: configure_fake_owl.cmake  configure_glfw.cmake
include/: cuda_runtime.h  driver_types.h  math_constants.h  optix.h  optix_device.h  optix_stubs.h
include/fake/: cuda.h  module_decl.h  optix.h  optix_device.h  owl.h  version.h
include/owl/: owl.h  owl_device.h  owl_ext.h  owl_host.h
include/owl/common/math/: vec.h
samples/: CMakeLists.txt
samples/common/owlViewer/: CMakeLists.txt  OWLViewer.cpp  OWLViewer.h
samples/fake01-rayCasting/: CMakeLists.txt  Renderer.cpp  Renderer.h  deviceCode.cpp  deviceCode.h  mesh.cpp  mesh.h  viewer.cpp
samples/int01-simpleTriangles/: CMakeLists.txt  deviceCode.cpp  hostCode.cpp
samples/int06-mixedGeometries/: CMakeLists.txt  GeomTypes.h  deviceCode.cpp  hostCode.cpp
samples/int07-whitted/: CMakeLists.txt  hostCode.cpp
samples/int10-texturedTriangles/: CMakeLists.txt  deviceCode.cpp  deviceCode.h  hostCode.cpp
samples/int11-rotatingBoxes/: CMakeLists.txt  deviceCode.cpp  deviceCode.h  hostCode.cpp
samples/int15-cookBilliardScene/: CMakeLists.txt  deviceCode.cpp  deviceCode.h  hostCode.cpp
samples/optix7course/: CMakeLists.txt  Model.cpp  SampleRenderer.cpp  SampleRenderer.h  main.cpp
samples/s05-rtow/: CMakeLists.txt  Materials.h  deviceCode.cpp
samples/s08-sierpinski/: CMakeLists.txt  deviceCode.cpp  hostCode.cpp
src/: Bounds.cpp  Bounds.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ClosestHit.cpp  ClosestHit.h  Context.cpp  Context.h  DataType.h  Geom.cpp  Geom.h  GeomGroup.cpp  GeomGroup.h  GeomType.cpp  GeomType.h  Group.cpp  Group.h  InstanceGroup.cpp  InstanceGroup.h  Intersect.cpp  Intersect.h  Logging.cpp  Logging.h  Miss.cpp  Miss.h  Module.cpp  Module.h  Params.cpp  Params.h  Program.cpp  Program.h  RayGen.cpp  RayGen.h  Resource.cpp  Resource.h  Texture.cpp  Texture.h  Trace.cpp  Trace.h  (+9 more)
src/backend/: Visionaray.h
